[tool.poetry]
name = "vlm-support"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openai = "^1.57.4"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
